--- a/petrograd.html
+++ b/petrograd.html
@@ -63,7 +63,7 @@
 		<template id="produkt_template">
 
 			<div class="col-sm-4 col-lg-4 col-md-4">
-				<a href="#"> </a><img class="img-responsive data_billede" src="imgs/small/rodbede-cabanossi-sm.jpg" alt=""> </a>
+				<a href="#"> </a><img class="img-responsive data_billede" src="imgs/small/rodbede-cabanossi-sm.jpg" alt="data_billede"></a>
 				<h3 class="data_navn">DATA_NAVN</h3>
 				<h4 class="pris">Pris: <span class="data_pris">DATA_PRIS</span>,-</h4>
 				<!-- todo sæt udsolgt class ved -->
